--- a/.github/workflows/build-deploy-to-ftp.yml
+++ b/.github/workflows/build-deploy-to-ftp.yml
@@ -30,4 +30,4 @@ jobs:
         password: ${{ secrets.FTP_PASSWORD }}
         protocol: ${{ env.FTP_PROTOCOL }}
         local-dir: dist/
-        server-dir: ${{ env.SERVER_DIR }}
+        server-dir: dist/
